ChangeLog for RQL
=================

	--
    * fix Comparison.as_string to considerer its optional attribute
    * add some missing operators (#72295):

      * % (modulo),
      * ^ (power),
      * & (bitwise AND),
      * | (bitwise OR),
      * # (bitwise XOR),
      * << (bitwise left shift),
      * >> (bitwise right shift)

2011-07-27  --  0.29.1
    * #70264: remove_group_var renamed into remove_group_term and fixed
      implementation

    * #70416: rql annotator add 'having' list into variable's stinfo, and
      properly update variable graph

    * #71131: as_string doesn't  propagate encoding/kwargs to subqueries

    * #71132: column alias scope should be handled as variable scope, not bound
      to subquery

    * #71157: bad analyze when using functions

    * #71415: needs to allow outer join on rhs of final relation and in HAVING express

    * Select.replace must properly reset old node's parent attribute

    * new undo_modification context manager on select nodes



2011-06-09  --  0.29.0
    * support != operator for non equality

    * support for CAST function

    * support for regexp-based pattern matching using a REGEXP operator

    * may now GROUPBY functions / column number

    * fix parsing of negative float



2011-01-12  --  0.28.0
    * enhance rewrite_shared_optional so one can specify where the new identity
      relation should be added (used by cw multi-sources planner)



2010-10-13  --  0.27.0
    * select.undefine_variable properly cleanup solutions (and restore them on
      undo)

    * fix potential crash in Referenceable.get_description

    * introduce make_constant_restriction function, useful to build a
      restriction without adding it yet to the tree



2010-09-10  --  0.26.6
    * enhance bad rql query detection with ordered distinct (can't use distinct
      if an attribute is selected and we sort on another attribute)

    * fix subquery_selection_index responsability mess-up: it wasn't doing what